[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Danh sách phòng"

[node name="RoomList" type="ItemList" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 1024.0
margin_bottom = 42.0

[node name="ButtonCreate" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 20.0
text = "Tạo Phòng"

[node name="ButtonJoin" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 146.0
margin_bottom = 20.0
text = "Tham Gia"

[node name="ButtonExit" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 197.0
margin_bottom = 20.0
text = "Thoát"
